--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -21,7 +21,7 @@
         <li class="list-group-item d-flex">
             <h2 class="d-flex"><i class="bi bi-trophy me-2  mt-2"></i></h2>
             <div class="d-flex align-items-center bg-light p-2 flex-grow-1 flex-wrap">
-                Cilj je poiskati besede različnih dolžin. Napredek lahko vidiš s pritiskom na simbol pokala.
+                Cilj je poiskati {{GameService.GAME_GOAL}} besed.
             </div>
         </li>
         <li class="list-group-item d-flex">
