--- a/src/app/inventory/inventory.component.html
+++ b/src/app/inventory/inventory.component.html
@@ -28,7 +28,7 @@
         ></div>
         <div aria-hidden="true" class="d-flex">
             <i class="bi bi-trophy"></i> <span
-                class="ms-2 d-none d-lg-block">Cilji ({{gameService.guessedWords.length + '/' + gameService.goalsTotal}}
+                class="ms-2 d-none d-lg-block">Cilji ({{gameService.guessedWords.length + '/' + GameService.GAME_GOAL}}
             )</span>
         </div>
     </button>
