--- a/src/_bootstrap-variables.scss
+++ b/src/_bootstrap-variables.scss
@@ -2,5 +2,5 @@ $primary: #3498DB;
 $secondary: #2C3E50;
 $danger: #E74C3C;
 $warning: #fa9600;
-//$body-bg: #f1f1f1;
+$body-bg: #f8f9fa;
 //$success: #12de3b;
