--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -24,7 +24,7 @@
             <div [class.alert-danger]="wordInvalid"
                  [class.alert]="wordInvalid"
                  [class.border-danger]="wordInvalid"
-                 class="card border-1 border mt-3 p-0 mb-0"
+                 class="card mt-3 p-0 mb-0"
             >
                 <div class="card-body p-0">
                     <div *ngIf="gameService.currentWord" class="d-flex justify-content-between align-items-stretch">
