--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -29,27 +29,32 @@
     <ul class="list-group list-group-flush">
         <li class="list-group-item d-flex"></li>
         <li class="list-group-item d-flex">
-            <h2 class="d-flex"><i class="bi bi-hourglass me-2 mt-2"></i></h2>
+            <div class="d-flex big-text"><i class="bi bi-ladder me-2 mt-2"></i></div>
+            <a  class="d-flex align-items-center p-2 flex-grow-1"
+            (click)="actionOpenLeaderBoard()">Lestvica najboljših</a>
+        </li>
+        <li class="list-group-item d-flex">
+            <div class="d-flex big-text"><i class="bi bi-hourglass me-2 mt-2"></i></div>
             <div class="d-flex align-items-center bg-light p-2 flex-grow-1">Igra je časovno omejena.</div>
         </li>
         <li class="list-group-item d-flex">
-            <h2 class="d-flex"><i class="bi bi-trophy me-2  mt-2"></i></h2>
+            <div class="d-flex big-text"><i class="bi bi-trophy me-2  mt-2"></i></div>
             <div class="d-flex align-items-center bg-light p-2 flex-grow-1 flex-wrap">
                 Cilj je poiskati {{GameService.GAME_GOAL}} besed.
             </div>
         </li>
         <li class="list-group-item d-flex">
-            <h2 class="d-flex"><i class="bi bi-send me-2  mt-2"></i></h2>
+            <div class="d-flex big-text"><i class="bi bi-send me-2  mt-2"></i></div>
             <div class="d-flex align-items-center bg-light p-2 flex-grow-1 flex-wrap">Besede so preverjene na portalu <a
                     class="ms-2" href="https://fran.si" target="_blank">fran.si</a></div>
         </li>
         <li class="list-group-item d-flex">
-            <h2 class="d-flex"><i class="bi bi-emoji-sunglasses me-2  mt-2"></i></h2>
+            <div class="d-flex big-text"><i class="bi bi-emoji-sunglasses me-2  mt-2"></i></div>
             <div class="d-flex align-items-center bg-light p-2 flex-grow-1 flex-wrap">Zapri igro in nadaljuj kasneje.
             </div>
         </li>
         <li class="list-group-item d-flex">
-            <h2 class="d-flex"><i class="bi bi-github me-2  mt-2"></i></h2>
+            <div class="d-flex big-text"><i class="bi bi-github me-2  mt-2"></i></div>
             <div class="d-flex align-items-center bg-light p-2 flex-grow-1 flex-wrap">Koda je dostopna na <a
                     class="ms-2" href="https://github.com/majster/bogglenc" target="_blank">github.com</a></div>
         </li>
