--- a/src/app/leader-board-modal/leader-board-modal.component.html
+++ b/src/app/leader-board-modal/leader-board-modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <h4 class="modal-title pull-left text-uppercase"><i class="bi bi-ladder"></i> Lestvica najboljših</h4>
-    <button (click)="modalRef?.hide()" aria-label="Close" class="btn-close close pull-right" type="button">
+    <button (click)="modalRef.hide()" aria-label="Close" class="btn-close close pull-right" type="button">
         <span aria-hidden="true" class="visually-hidden">&times;</span>
     </button>
 </div>
