--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,11 @@
     <div class="d-flex align-items-center">
         <div class="container p-4">
 
-            <ng-container *ngIf="this.gameService.gameData">
+            <ng-container *ngIf="gameService.isShowMainMenu">
+                <app-main-menu></app-main-menu>
+            </ng-container>
+
+            <ng-container *ngIf="this.gameService.gameData && !gameService.isShowMainMenu">
                 <div class="row border-bottom">
                     <div class="col-3 p-2 border-end">
                         <app-score></app-score>
@@ -27,17 +31,40 @@
                                     class="btn btn-outline-primary ms-auto"
                                     type="button">
                                 <i class="bi bi-dice-5-fill"></i> Začni novo
+                                <div *ngIf="gameService.newGameCreating$ | async"
+                                     aria-hidden="true"
+                                     class="spinner-border spinner-border-sm"
+                                     role="status"></div>
                             </button>
                         </div>
                         <div *ngIf="gameService.gameState === GameState.VICTORY" class="text-center">
-                            <div class="mb-2 big-text">Čestitke za uvrstitev na lestvico!</div>
+
+                            <ng-container *ngIf="gameService.gameData.game.leaderboardRank! <= 50">
+                                <div class="mb-2 big-text">Čestitke za uvrstitev
+                                    na {{gameService.gameData.game.leaderboardRank}}. mesto!
+                                </div>
+                                <button (click)="openLeaderBoardForm()"
+                                        *ngIf="!gameService.gameData.game.name"
+                                        class="btn btn-primary text-white btn-lg mb-3"
+                                        type="button">
+                                    <i aria-hidden="true" class="bi bi-trophy"></i> Vpiši se med zmagovalce
+                                </button>
+                                <br>
+                            </ng-container>
+
+                            <div *ngIf="gameService.gameData.game.leaderboardRank! > 50" class="mb-2 big-text">
+                                Čestitke!
+                            </div>
+
                             <button (click)="actionConfirmNewGame()"
-                                    class="btn btn-outline-primary ms-auto"
+                                    class="btn btn-outline-primary ms-auto mb-3"
                                     type="button">
                                 <i class="bi bi-dice-5-fill"></i> Začni novo
                             </button>
+
+                            <app-leader-board></app-leader-board>
+                            <app-victory-confetti></app-victory-confetti>
                         </div>
-                        <app-leader-board *ngIf="gameService.gameState === GameState.VICTORY"></app-leader-board>
                     </div>
                 </div>
             </ng-container>
