--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,30 +1,47 @@
 <app-modal [title]="'Nastavitve'">
 
-    <div class="d-flex justify-content-between">
-        <span>Svetlost</span>
+    <dl class="list-group list-group-flush main-menu-list">
+        <li class="list-group-item"></li>
+        <li class="list-group-item">
+            <div class="d-flex justify-content-between">
+                <div class="align-items-center d-flex">Svetlost</div>
 
-        <div>
-            <label class="night-light-label" for="night-light-checkbox">
-                <input (click)="toggleLightDarkMode()" [checked]="mode === 1"
-                       id="night-light-checkbox"
-                       type="checkbox">
-                <span class="night-light-ball"></span>
-                <svg class="sun-svg" viewBox="0 0 512 512">
-                    <path d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
-                          id="sun-svg">
-                    </path>
-                </svg>
-                <svg class="moon-svg" viewBox="0 0 512 512">
-                    <path d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"
-                          id="moon-svg">
-                    </path>
-                </svg>
-            </label>
-        </div>
-    </div>
+                <div>
+                    <label class="night-light-label" for="night-light-checkbox">
+                        <input (click)="toggleLightDarkMode()" [checked]="mode === 1"
+                               id="night-light-checkbox"
+                               type="checkbox">
+                        <span class="night-light-ball"></span>
+                        <svg class="sun-svg" viewBox="0 0 512 512">
+                            <path d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
+                                  id="sun-svg">
+                            </path>
+                        </svg>
+                        <svg class="moon-svg" viewBox="0 0 512 512">
+                            <path d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"
+                                  id="moon-svg">
+                            </path>
+                        </svg>
+                    </label>
+                </div>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="d-flex justify-content-between">
+                <div class="align-items-center d-flex">Shrani na namizje</div>
 
-    <div class="mt-3 pt-4 border-top d-flex justify-content-end">
+                <div>
+                    <button (click)="gameService.beforeInstallPrompt.prompt()"
+                            class="btn btn-outline-secondary"
+                            type="button">
+                        <i class="bi bi-download"></i>
+                    </button>
+                </div>
+            </div>
+        </li>
+        <li class="list-group-item"></li>
+    </dl>
+    <div class="d-flex justify-content-end mt-4">
         <button (click)="actionExitGame()" class="btn btn-secondary" type="button">V glavni meni</button>
     </div>
-
 </app-modal>
