--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -28,13 +28,13 @@
         </li>
         <li class="list-group-item">
             <div class="d-flex justify-content-between">
-                <div class="align-items-center d-flex">Shrani na namizje</div>
+                <div class="align-items-center d-flex">Shrani bližnjico</div>
 
                 <div>
                     <button (click)="gameService.beforeInstallPrompt.prompt()"
                             class="btn btn-outline-secondary"
                             type="button">
-                        <i class="bi bi-download"></i>
+                        <i class="bi bi-app-indicator" aria-hidden="true"></i>
                     </button>
                 </div>
             </div>
