Frontend support for gameover

--- a/src/_bootstrap-dark-mode.scss
+++ b/src/_bootstrap-dark-mode.scss
@@ -53,4 +53,8 @@
   --#{$prefix}list-group-bg: #{$list-group-bg};
 
   @import "bootstrap-imports";
+
+  .btn-outline-secondary{
+    color: $body-color;
+  }
 }
