--- a/src/_bootstrap-variables.scss
+++ b/src/_bootstrap-variables.scss
@@ -3,4 +3,5 @@ $secondary: #2C3E50;
 $danger: #E74C3C;
 $warning: #fa9600;
 $body-bg: #f8f9fa;
+$box-shadow-sm: 0 .125rem .25rem rgba(#000, .575);
 //$success: #12de3b;
