--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -21,6 +21,13 @@
             </div>
         </div>
 
+        <div class="timer position-relative">
+            <div aria-hidden="true"
+                 class="btn p-0 bg-danger position-absolute"
+                 style="z-index: -1; top: 0; bottom:0; left: 0; width: {{timeProgressBarWidth}}%;"
+            ></div>
+        </div>
+
         <div class="commands">
             <div [class.alert-danger]="wordInvalid"
                  [class.alert]="wordInvalid"
@@ -30,7 +37,9 @@
                 <div class="card-body p-0">
                     <div *ngIf="gameService.currentWord" class="d-flex justify-content-between align-items-stretch">
                         <button (click)="restCurrentWord()"
-                                class="btn btn-outline-secondary rounded-1 ps-3 pe-3 left-command"
+                                [class.btn-outline-danger]="wordInvalid"
+                                [class.btn-outline-secondary]="!wordInvalid"
+                                class="btn  rounded-1 ps-3 pe-3 left-command shadow-sm"
                                 type="button">
                             <i class="bi bi-trash3"></i>
                         </button>
@@ -44,6 +53,7 @@
                         <button (click)="submit()"
                                 *ngIf="!wordInvalid"
                                 [disabled]="gameService.currentWord.length < 3 || inProgress"
+                                [class.shadow-sm]="gameService.currentWord.length >= 3 && !inProgress"
                                 class="btn btn-primary rounded-1 ps-3 pe-3 right-command text-white"
                                 type="button">
                             <i *ngIf="!inProgress" class="bi bi-send"></i>
@@ -53,7 +63,7 @@
 
                         <button (click)="restCurrentWord()"
                                 *ngIf="wordInvalid"
-                                class="btn btn-outline-danger rounded-1 ps-3 pe-3 right-command"
+                                class="btn btn-outline-danger rounded-1 ps-3 pe-3 right-command shadow-sm"
                                 type="button">
                             <i class="bi bi-trash3"></i>
                         </button>
@@ -66,11 +76,11 @@
             <div *ngIf="gameService.currentWord.length > 2"
                  class="text-center"
                  style="font-size: 12px;">
-                črke ({{calculateLettersValue(gameService.currentWord)}})
+                {{calculateLettersValue(gameService.currentWord)}}
                 <span *ngIf="calculateWordLengthValue(gameService.currentWord)">
-                    + (<i class="bi bi-trophy"></i> {{calculateWordLengthValue(gameService.currentWord)}})
+                    + <i class="bi bi-trophy"></i> {{calculateWordLengthValue(gameService.currentWord)}}
                 </span>
-                 | (-<i class="bi bi-hourglass-top"></i> {{gameService.timeBonusByWord()}}s)
+                 (+ <i class="bi bi-hourglass-top"></i> {{gameService.timeBonusByWord()}}s)
             </div>
             <div *ngIf="wordInvalid" class="text-center text-danger"
                  style="font-size: 12px;">Neznana beseda
