--- a/src/app/components/leader-board-modal/leader-board-modal.component.html
+++ b/src/app/components/leader-board-modal/leader-board-modal.component.html
@@ -1,3 +1,3 @@
-<app-modal [icon]="'ladder'" [title]="'Lestvica najboljših'">
+<app-modal [icon]="'ladder'" [title]="'Lestvica najboljših'" [iconClass]="'text-primary'">
     <app-leader-board></app-leader-board>
 </app-modal>
