--- a/src/app/views/main-menu/main-menu.component.html
+++ b/src/app/views/main-menu/main-menu.component.html
@@ -2,20 +2,12 @@
     <div>
         <h1>Bogglenc</h1>
     </div>
-    <div class="align-items-end d-flex">
-        <button (click)="actionOpenMenu()"
-                aria-label="Nastavitve"
-                class="btn btn-outline-secondary ms-auto"
-                type="button">
-            <i class="bi bi-list"></i>
-        </button>
-    </div>
 </div>
 <div class="mt-5">
     <dl class="list-group list-group-flush main-menu-list">
         <li class="list-group-item">
             <button (click)="actionNewGame()"
-                    class="btn btn-primary btn-lg p-3" type="button">Nova Igra
+                    class="btn btn-primary btn-lg p-3 shadow-sm" type="button">Nova Igra
                 <div *ngIf="inProgressActionNewGame$ | async"
                      aria-hidden="true"
                      class="spinner-border spinner-border-sm"
@@ -24,24 +16,32 @@
         </li>
         <li class="list-group-item">
             <button (click)="actionResumeGame()"
+                    [class.btn-secondary]="existingGame"
+                    [class.shadow-sm]="existingGame"
                     [class.text-muted]="!existingGame"
                     [disabled]="!existingGame"
-                    class="btn btn-secondary btn-lg p-3 position-relative"
+                    class="btn btn-lg p-3 position-relative"
                     type="button">Nadaljuj Igro
                 <div *ngIf="existingGame" aria-hidden="true" class="attention"></div>
             </button>
         </li>
         <li class="list-group-item">
             <button (click)="actionLeaderBoard()"
-                    class="btn btn-outline-secondary btn-lg p-3"
-                    type="button">Lestvica najboljših
+                    class="btn btn-outline-secondary btn-lg p-3 shadow-sm"
+                    type="button">Lestvica Najboljših
             </button>
         </li>
         <li class="list-group-item">
-            <a class="btn btn-outline-secondary btn-lg p-3"
+            <button (click)="actionOpenMenu()"
+                    class="btn btn-outline-secondary btn-lg p-3 shadow-sm"
+                    type="button">Nastavitve
+            </button>
+        </li>
+        <li class="list-group-item">
+            <a class="btn btn-outline-secondary btn-lg p-3 shadow-sm"
                href="https://kompostnik.itch.io/bogglenc"
                target="_blank">
-                <i class="bi bi-chat-square-heart text-primary me-2"></i>Skupnost
+                <i aria-hidden="true" class="bi bi-chat-square-heart text-primary me-2"></i>Skupnost
             </a>
         </li>
     </dl>
