--- a/src/app/components/score/score.component.html
+++ b/src/app/components/score/score.component.html
@@ -1,3 +1,3 @@
 <div class="text-end">
-  <div class="score" [countUp]="gameService.score!"></div>
+  <div class="score">{{gameService.score}}</div>
 </div>
