--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -61,9 +61,16 @@
                             <i class="bi bi-trash3"></i>
                         </button>
                     </div>
-                    <div *ngIf="!gameService.currentWord" class="text-muted text-center  p-4">Poišči besedo, čas se
-                        izteka!
+                    <div class="d-flex align-items-center" *ngIf="!gameService.currentWord">
+                        <div>
+                            <button (click)="handleSpeechInput('žir')">klik</button>
+
+                        </div>
+                        <div class="text-muted text-center p-4 flex-grow-1">Poišči besedo, čas se
+                            izteka!
+                        </div>
                     </div>
+                    <app-speech-capture (captureEvent)="handleSpeechInput($event)"></app-speech-capture>
                 </div>
             </div>
             <div *ngIf="gameService.currentWord.length > 2"
