Letters re-balance: score displayed and calculated from backend datamodel

--- a/src/app/components/board-key/board-key.component.scss
+++ b/src/app/components/board-key/board-key.component.scss
@@ -19,6 +19,9 @@
 
   &.selected {
     background-color: $gray-600;
+    .text-muted {
+        color: $gray-400 !important;
+    }
   }
 
   &.last-letter {
