--- a/src/app/views/main-menu/main-menu.component.html
+++ b/src/app/views/main-menu/main-menu.component.html
@@ -6,43 +6,36 @@
 <div class="mt-5">
     <dl class="list-group list-group-flush main-menu-list">
         <li class="list-group-item">
-            <button (click)="actionNewGame()"
-                    class="btn btn-primary btn-lg p-3 shadow-sm" type="button">Nova Igra
-                <div *ngIf="inProgressActionNewGame$ | async"
-                     aria-hidden="true"
-                     class="spinner-border spinner-border-sm"
-                     role="status"></div>
+            <button (click)="actionNewGame()" class="btn btn-primary btn-lg p-3 shadow-sm" type="button">Nova Igra
+                <div *ngIf="inProgressActionNewGame$ | async" aria-hidden="true"
+                    class="spinner-border spinner-border-sm" role="status"></div>
             </button>
         </li>
         <li class="list-group-item">
-            <button (click)="actionResumeGame()"
-                    [class.btn-secondary]="existingGame"
-                    [class.shadow-sm]="existingGame"
-                    [class.text-muted]="!existingGame"
-                    [disabled]="!existingGame"
-                    class="btn btn-lg p-3 position-relative"
-                    type="button">Nadaljuj Igro
+            <button (click)="actionResumeGame()" [class.btn-secondary]="existingGame" [class.shadow-sm]="existingGame"
+                [class.text-muted]="!existingGame" [disabled]="!existingGame" class="btn btn-lg p-3 position-relative"
+                type="button">Nadaljuj Igro
                 <div *ngIf="existingGame" aria-hidden="true" class="attention"></div>
             </button>
         </li>
         <li class="list-group-item">
-            <button (click)="actionLeaderBoard()"
-                    class="btn btn-outline-secondary btn-lg p-3 shadow-sm"
-                    type="button">Lestvica Najboljših
+            <button (click)="actionLeaderBoard()" class="btn btn-outline-secondary btn-lg p-3 shadow-sm"
+                type="button">Lestvica Najboljših
             </button>
         </li>
         <li class="list-group-item">
-            <button (click)="actionOpenMenu()"
-                    class="btn btn-outline-secondary btn-lg p-3 shadow-sm"
-                    type="button">Nastavitve
+            <button (click)="actionOpenMenu()" class="btn btn-outline-secondary btn-lg p-3 shadow-sm"
+                type="button">Nastavitve
             </button>
         </li>
         <li class="list-group-item">
-            <a class="btn btn-outline-secondary btn-lg p-3 shadow-sm"
-               href="https://kompostnik.itch.io/bogglenc"
-               target="_blank">
+            <a class="btn btn-outline-secondary btn-lg p-3 shadow-sm" href="https://kompostnik.itch.io/bogglenc"
+                target="_blank">
                 <i aria-hidden="true" class="bi bi-chat-square-heart text-primary me-2"></i>Skupnost
             </a>
+        </li>
+        <li class="list-group-item">
+            <a class="btn btn-outline-secondary btn-lg p-3 shadow-sm" (click)="actionLogin()">Prijava </a>
         </li>
     </dl>
 </div>
